# neo-code

./: .gitignore  LICENSE  Makefile  README-en.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
DOC/: ARCHITECTURE.md
deployment/: INSTALL_ARM64.md  OPTIMIZE_FLASH.md  build-package.sh  install-arm64.sh  requirements-arm64.txt
docs/: app_context.md  architecture.md  neocode_gtk_setup.md
docs/specs/: build_deploy.md  release_update.md
docs/specs/feature/: lesson.md  robot.md
neo_code/: __main__.py  app.py
neo_code/core/: event_bus.py  extension_interface.py  file_manager.py  settings.py  updater.py  version.py
neo_code/data/styles/: app.css
neo_code/execution/: output_parser.py  proxy_injector.py  runner.py
neo_code/features/curriculum/: feature.py
neo_code/features/lessons/: evaluator.py  feature.py  feedback_mapper.py  lesson_panel.py  lesson_sidebar.py  lesson_workspace.py  loader.py  progress_store.py
neo_code/features/lessons/data/: lesson_pack.json
neo_code/features/robot/: feature.py  loader.py  robot_connection.py  robot_panel.py  robot_sidebar.py  robot_workspace.py
neo_code/features/robot/data/: robot_pack.json
neo_code/features/turtle_canvas/: feature.py
neo_code/theme/: colors.py
neo_code/ui/: editor_panel.py  main_window.py  repl_panel.py  settings_dialog.py  sidebar_panel.py  terminal_panel.py  toolbar.py  update_dialog.py
scripts/: create_entrypoint.sh  install_on_neo.sh  install_on_neo_script.sh  installer_script.sh
src/neo_code/: __init__.py  __main__.py  app.py
src/neo_code/ai/: __init__.py  assistant_service.py  context_builder.py  conversation_history.py  llm_client.py  prompt_templates.py  response_parser.py
src/neo_code/config/: defaults.toml  settings.py
src/neo_code/core/: __init__.py  code_analyzer.py  code_completer.py  execution_engine.py  models.py  robot_interpreter.py  robot_models.py  robot_physics.py  turtle_interpreter.py
src/neo_code/education/: __init__.py  curriculum.py  phase_manager.py  progress_tracker.py  projects.py  robot_challenges.py
src/neo_code/education/hints/: __init__.py  common_errors.py  turtle_hints.py
src/neo_code/hardware/: __init__.py  gpio_wrapper.py  sensor_manager.py  simulator.py
src/neo_code/storage/: database.py  models.py
src/neo_code/ui/: __init__.py  ai_chat_panel.py  ai_input_widget.py  code_editor.py  editor_toolbar.py  main_window.py  output_panel.py  progress_widget.py  robot_arena_canvas.py  samples.py  theme.py  turtle_canvas.py
src/neo_code/ui/dialogs/: __init__.py  level_selector.py
src/neo_code/utils/: debouncer.py  signal_bus.py
tests/: conftest.py
